--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,60 +11,60 @@
   },
   "dependencies": {
     "ajv": "^6.10.2",
-    "axios": "^0.17.1",
-    "buefy": "^0.7.10",
-    "bulma": "^0.6.2",
+    "axios": "^0.19.0",
+    "buefy": "^0.8.3",
+    "bulma": "^0.7.5",
     "dateformat": "^3.0.3",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.15",
-    "sockjs-client": "1.3.0",
+    "sockjs-client": "1.4.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "vue": "^2.6.10",
-    "vue-i18n": "^7.8.1",
-    "vue-router": "^3.0.7",
-    "vuelidate": "^0.6.2",
+    "vue-i18n": "^8.14.1",
+    "vue-router": "^3.1.3",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.5.4",
     "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
-    "@kazupon/vue-i18n-loader": "^0.2.1",
-    "autoprefixer": "^7.1.2",
+    "@kazupon/vue-i18n-loader": "^0.4.1",
+    "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "chalk": "^2.4.2",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.11",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^2.30.1",
-    "node-notifier": "^5.4.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-notifier": "^5.4.3",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.1",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.21",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.1.6",
-    "postcss-url": "^7.3.2",
-    "rimraf": "^2.6.3",
-    "sass-loader": "^6.0.7",
-    "semver": "^5.7.0",
-    "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^1.1.2",
-    "vue-loader": "^13.7.3",
-    "vue-style-loader": "^3.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "ora": "^3.4.0",
+    "portfinder": "^1.0.24",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
+    "rimraf": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "semver": "^6.3.0",
+    "shelljs": "^0.8.3",
+    "url-loader": "^2.1.0",
+    "vue-loader": "^15.7.1",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^3.12.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-server": "^2.11.5",
-    "webpack-merge": "^4.2.1"
+    "webpack": "^4.40.2",
+    "webpack-bundle-analyzer": "^3.5.0",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-merge": "^4.2.2"
   },
   "engines": {
     "node": ">= 6.0.0",
